Add MCP codegen and archive OpenSpec change